--- a/atividade5/src/components/commom/Navegador/Navegador.css
+++ b/atividade5/src/components/commom/Navegador/Navegador.css
@@ -1,8 +1,15 @@
 .navegador{
     height: 40px;
+    width: 700px;
+    margin-top: 20px;
     display: flex;
     align-items: center;
-    background-color: rgb(5, 75, 69);
+    justify-content: center;
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    border-top: 1.5px solid rgb(255, 255, 255);
+    border-bottom: 1.5px solid rgb(255, 255, 255);
+    box-shadow: 0px 0px 5px rgb(255, 255, 255);
 }
 
 .navegador .logo{
@@ -17,22 +24,13 @@
 .navegador .logo div{
     
     animation-name: move-animacao;
-    animation-duration: 6s;
+    animation-duration: 2s;
     animation-iteration-count: infinite;
 }
 
 @keyframes move-animacao{
     0%{
         transform: rotate(0deg);
-    }
-    25%{
-        transform: rotate(90deg);
-    }
-    50%{
-        transform: rotate(180deg);
-    }
-    75%{
-        transform: rotate(270deg);
     }
     100%{
         transform: rotate(360deg);
@@ -43,44 +41,21 @@
     text-shadow: black 0.3em 0.1em 0.1em;
 }
 
-.navegador .botao-feed{
+.navegador .botao-nav{
     color: white;
     text-decoration: none;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 30px;
     padding-right: 30px;
+    border-radius: 20px;
 }
 
-.navegador .botao-feed:hover{
+.navegador .botao-nav:hover{
     color: black;
     background-color: white;
 }
 
-.navegador .botao-perfil{
-    color: white;
-    text-decoration: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.navegador .botao-perfil:hover{
-    color: black;
-    background-color: white;
-}
-
-.navegador .botao-logout{
-    color: white;
-    text-decoration: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.navegador .botao-logout:hover{
-    color: black;
-    background-color: white;
+.navegador .botao-nav.active{
+    background-color: rgb(47, 93, 161);
 }
