--- a/atividade5/src/components/commom/Rodapé/Rodape.css
+++ b/atividade5/src/components/commom/Rodapé/Rodape.css
@@ -1,8 +1,15 @@
 .rodape{
+    width: 700px;
     height: 40px;
+    margin-bottom: 20px;
     text-align: center;
     align-items: center;
+    display: flex;
+    justify-content: center;
     color: white;
-    padding: 10px;
-    background-color: rgb(5, 75, 69);
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    border-top: 1.5px solid rgb(255, 255, 255);
+    border-bottom: 1.5px solid rgb(255, 255, 255);
+    box-shadow: 0px 0px 5px rgb(255, 255, 255);
 }
