--- a/atividade5/src/components/pages/Posts/Posts.css
+++ b/atividade5/src/components/pages/Posts/Posts.css
@@ -1,18 +1,14 @@
 .post{
-    width: 800px;
+    width: 700px;
 
-    background-color: rgba(102, 102, 102, 0.61);
+    background-color: rgb(238, 225, 225);
     
-    margin: 20px 0;
+    margin: 20px;
 
     border-top: 1.5px solid rgb(0, 0, 0);
     border-bottom: 1.5px solid rgb(0, 0, 0);
-
     box-shadow: 0px 0px 5px rgb(0, 0, 0);
-
     border-radius: 20px;
-
-    padding: 25px;
 
     display: flex;
     flex-direction: column;
@@ -20,28 +16,33 @@
 }
 
 .post .user{
-    font-size: 1.2rem;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-size: 1.5rem;
     font-weight: 900;
 }
 
 .post .texto {
     text-align: justify;
-    font-size: 1rem;
-
-    padding: 8px 0 30px 0;
+    font-size: 1.2rem;
+    padding: 20px;
 }
 
 .post .caixa-likes{
+    padding-right: 20px;
+    padding-bottom: 20px;
     display: flex;
     align-items: center;
     margin-left: auto;
+    font-size: 1.2rem;
 }
 
 .post .caixa-likes img{
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
 }
 
 .post .caixa-likes button{
     cursor: pointer;
+    font-size: 1.2rem;
 }
